<resources>
    <string name="app_name">MSD Unit Converter</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="options_exit_text">Exit</string>
    <string name="selected_category_value">selectedValue</string>
    <string name="title_activity_conversion">Conversion</string>
    <string name="text_view_answer">Answer</string>
    <string name="button_calculate">Calculate</string>
    <string name="button_swap_conversion">Swap Conversion</string>
    <string name="edit_text_value">Value</string>
    <string name="value_3_temp">Value 3</string>
    <string name="menu_create_conversion">Create Conversion</string>
    <string name="title_activity_create_conversion">CreateConversion</string>
    <string name="edit_text_category">Category Name</string>
    <string name="edit_text_unit_1_name">Unit 1 Name</string>
    <string name="edit_text_unit_2_name">Unit 2 Name</string>
    <string name="text_view_to_formula">To Formula</string>
    <string name="text_view_from_formula">From Formula</string>
    <string name="button_create_conversion">Create conversion</string>
    <string name="button_add_formula">Add</string>
    <string name="button_form_undo">Undo</string>
    <string name="context_menu_delete_item">Delete Item</string>
    <string name="context_menu_rename_item">Rename Item</string>
    <string name="NewItem">New</string>

    <string-array name="spinner_new_item">
        <item>New</item>
    </string-array>
    <string-array name="formulaCreator">
        <item>Unit</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>Decimal</item>
        <item>Multiply</item>
        <item>Divide</item>
        <item>Addition</item>
        <item>Subtract</item>
        <item>Power</item>
        <item>Open bracket</item>
        <item>Close bracket</item>
    </string-array>
</resources>
