<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.islarf6546.gmail.myapplication.CreateConversion">


    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_categories"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:spinnerMode="dropdown"
        android:layout_toStartOf="@+id/add_to_form"
        android:layout_toLeftOf="@+id/add_to_form" />

    <!-- I set these to visible be default; yes they will flash for less than a frame, but its in-case there is No categories (all deleted) -->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/conv_category_name"
        android:hint="@string/edit_text_category"
        android:visibility="visible"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/add_to_form"
        android:layout_alignStart="@+id/add_to_form" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_unit_1"
        android:hint="@string/edit_text_unit_1_name"
        android:visibility="visible"
        android:layout_below="@+id/spinner_categories"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/spinner_categories"
        android:layout_toEndOf="@+id/spinner_categories" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_unit_2"
        android:hint="@string/edit_text_unit_2_name"
        android:layout_below="@+id/edit_text_unit_1"
        android:layout_alignLeft="@+id/edit_text_unit_1"
        android:layout_alignStart="@+id/edit_text_unit_1"
        android:visibility="visible"
        android:layout_alignRight="@+id/edit_text_unit_1"
        android:layout_alignEnd="@+id/edit_text_unit_1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/text_view_to_formula"
        android:id="@+id/text_view_to_formula"
        android:layout_below="@+id/edit_text_unit_2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/text_view_from_formula"
        android:id="@+id/text_view_from_formula"
        android:layout_below="@+id/nextToFormula"
        android:layout_alignLeft="@+id/text_view_to_formula"
        android:layout_alignStart="@+id/text_view_to_formula" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nextToFormula"
        android:spinnerMode="dropdown"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/text_view_to_formula"
        android:layout_alignRight="@+id/button_create_conversion"
        android:layout_alignEnd="@+id/button_create_conversion" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nextFromFormula"
        android:layout_below="@+id/text_view_from_formula"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/add_from_form"
        android:layout_toStartOf="@+id/add_from_form" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_create_conversion"
        android:id="@+id/button_create_conversion"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add_formula"
        android:id="@+id/add_to_form"
        android:layout_alignTop="@+id/nextToFormula"
        android:layout_toRightOf="@+id/nextToFormula"
        android:layout_toEndOf="@+id/nextToFormula"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_add_formula"
        android:id="@+id/add_from_form"
        android:layout_alignTop="@+id/nextFromFormula"
        android:layout_alignLeft="@+id/add_to_form"
        android:layout_alignStart="@+id/add_to_form" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_form_undo"
        android:id="@+id/undo_to_form"
        android:layout_alignBottom="@+id/add_to_form"
        android:layout_toRightOf="@+id/add_to_form"
        android:layout_toEndOf="@+id/add_to_form"
        android:layout_alignTop="@+id/add_to_form" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_form_undo"
        android:id="@+id/undo_from_form"
        android:layout_alignBottom="@+id/add_from_form"
        android:layout_toRightOf="@+id/add_from_form"
        android:layout_toEndOf="@+id/add_from_form"
        android:layout_alignTop="@+id/add_from_form" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_unit_1"
        android:layout_alignBottom="@+id/edit_text_unit_1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/add_to_form"
        android:layout_toLeftOf="@+id/add_to_form" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_unit_2"
        android:layout_above="@+id/text_view_to_formula"
        android:layout_toStartOf="@+id/add_to_form"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@+id/add_to_form" />

</RelativeLayout>
